rust/mimalloc-pprof/vendor/mimalloc-pprof-amalgamated.h


typedef void (mi_cdecl mi_deferred_free_fun)(bool force, unsigned long long heartbeat, void* arg);
typedef void (mi_cdecl mi_output_fun)(const char* msg, void* arg);
typedef void (mi_cdecl mi_error_fun)(int err, void* arg);
mi_decl_export void mi_on_thread_idle(void)     mi_attr_noexcept;
typedef struct mi_heap_s mi_heap_t;
typedef struct mi_heap_area_s {
  void*  blocks;      
  size_t reserved;    
  size_t committed;   
  size_t used;        
  size_t block_size;  
  size_t full_block_size; 
  void*  reserved1;   
} mi_heap_area_t;
typedef bool (mi_cdecl mi_block_visit_fun)(const mi_heap_t* heap, const mi_heap_area_t* area, void* block, size_t block_size, void* arg);
typedef bool (mi_cdecl mi_heap_visit_fun)(mi_heap_t* heap, void* arg);
typedef bool (mi_cdecl mi_commit_fun_t)(bool commit, void* start, size_t size, bool* is_zero, void* user_arg);
typedef enum mi_option_e {
  mi_option_show_errors,                
  mi_option_show_stats,                 
  mi_option_verbose,                    
  mi_option_deprecated_eager_commit,    
  mi_option_arena_eager_commit,         
  mi_option_purge_decommits,            
  mi_option_allow_large_os_pages,       
  mi_option_reserve_huge_os_pages,      
  mi_option_reserve_huge_os_pages_at,   
  mi_option_reserve_os_memory,          
  mi_option_deprecated_segment_cache,
  mi_option_deprecated_page_reset,
  mi_option_deprecated_abandoned_page_purge,
  mi_option_deprecated_segment_reset,
  mi_option_deprecated_eager_commit_delay, 
  mi_option_purge_delay,                
  mi_option_use_numa_nodes,             
  mi_option_disallow_os_alloc,          
  mi_option_os_tag,                     
  mi_option_max_errors,                 
  mi_option_max_warnings,               
  mi_option_deprecated_max_segment_reclaim,  
  mi_option_destroy_on_exit,            
  mi_option_arena_reserve,              
  mi_option_arena_purge_mult,           
  mi_option_deprecated_purge_extend_delay,
  mi_option_disallow_arena_alloc,       
  mi_option_retry_on_oom,               
  mi_option_deprecated_visit_abandoned, 
  mi_option_guarded_min,                
  mi_option_guarded_max,                
  mi_option_guarded_precise,            
  mi_option_guarded_sample_rate,        
  mi_option_guarded_sample_seed,        
  mi_option_generic_collect,            
  mi_option_page_reclaim_on_free,       
  mi_option_page_full_retain,           
  mi_option_page_max_candidates,        
  mi_option_max_vabits,                 
  mi_option_pagemap_commit,             
  mi_option_page_commit_on_demand,      
  mi_option_page_max_reclaim,           
  mi_option_page_cross_thread_max_reclaim, 
  mi_option_allow_thp,                  
  mi_option_minimal_purge_size,         
  mi_option_arena_max_object_size,      
  mi_option_arena_is_numa_local,        
  mi_option_prof,                       
  mi_option_prof_sample_rate,           
  mi_option_prof_bt_max,                
  mi_option_prof_accum,                 
  mi_option_prof_seed,                  
  mi_option_prof_max_bytes,             
  mi_option_memory_events,              
  mi_option_purge_zeroes,               
  mi_option_scavenger,                  
  mi_option_purge_holes,                
  mi_option_purge_holes_eager_zero,     
  mi_option_purge_holes_min_interval,   
  mi_option_purge_holes_full_every,     
  mi_option_snapshot_on_exit,           
  mi_option_page_reserve,               
  mi_option_resident_first,             
  _mi_option_last,
  mi_option_large_os_pages = mi_option_allow_large_os_pages,
  mi_option_eager_region_commit = mi_option_arena_eager_commit,
  mi_option_reset_decommits = mi_option_purge_decommits,
  mi_option_reset_delay = mi_option_purge_delay,
  mi_option_limit_os_alloc = mi_option_disallow_os_alloc
} mi_option_t;
typedef void (mi_prof_write_fun)(void* arg, const char* buf, size_t len);
mi_decl_export void mi_prof_reset(void) mi_attr_noexcept;
typedef struct mi_prof_sample_info_s {
  const void* const* stack;
  size_t depth;
  size_t live_objects;  size_t live_bytes;
  size_t accum_objects; size_t accum_bytes;
} mi_prof_sample_info_t;
typedef bool (mi_prof_visit_fun)(const mi_prof_sample_info_t* info, void* arg);
typedef struct mi_prof_module_info_s { const char* path; uintptr_t base; size_t size; } mi_prof_module_info_t;
typedef bool (mi_prof_module_visit_fun)(const mi_prof_module_info_t* info, void* arg);
typedef enum mi_memory_change_kind_e {
  MI_MEMORY_ALLOCATE,
  MI_MEMORY_FREE,
  MI_MEMORY_RESIZE,
  MI_MEMORY_CHANGE_COUNT,
} mi_memory_change_kind_t;
typedef struct mi_memory_change_s {
  mi_memory_change_kind_t kind;
  uint64_t total_bytes;
  int64_t delta_bytes;
  uint64_t request_size;
} mi_memory_change_t;
typedef void (mi_memory_change_fun)(
  const mi_memory_change_t* change,
  void* arg
);
typedef struct mi_memory_callbacks_s {
  mi_memory_change_fun* handlers[MI_MEMORY_CHANGE_COUNT];
  void*                 args[MI_MEMORY_CHANGE_COUNT];
} mi_memory_callbacks_t;
#define MI_MEMORY_SNAPSHOT_VERSION 1
typedef struct mi_memory_snapshot_s {
  size_t   size; int version;
  uint64_t live_bytes;         
  uint64_t accum_bytes;        
  uint64_t live_count;         
  uint64_t accum_count;        
} mi_memory_snapshot_t;
mi_decl_nodiscard mi_decl_export bool mi_memory_snapshot(mi_memory_snapshot_t* out) mi_attr_noexcept;
typedef bool (mi_memory_allocation_visit_fun)(
  void*  allocation,   
  size_t usable_size,  
  void*  arg           
);