rust/mimalloc-pprof/vendor/mimalloc-stats.h


typedef struct mi_stat_count_s {
  int64_t total;                              
  int64_t peak;                               
  int64_t current;                            
} mi_stat_count_t;
typedef struct mi_stat_counter_s {
  int64_t total;                              
} mi_stat_counter_t;
typedef enum mi_chunkbin_e {
  MI_CBIN_SMALL,    
  MI_CBIN_OTHER,    
  MI_CBIN_MEDIUM,   
  MI_CBIN_LARGE,    
  MI_CBIN_HUGE,     
  MI_CBIN_NONE,     
  MI_CBIN_COUNT
} mi_chunkbin_t;
typedef struct mi_stats_s
{
  size_t size;          
  size_t version;       
  mi_decl_align(8)  MI_STAT_FIELDS()
  mi_stat_count_t   _stat_reserved[4];
  mi_stat_counter_t _stat_counter_reserved[4];
  mi_stat_count_t   malloc_bins[MI_BIN_HUGE+1];   
  mi_stat_count_t   page_bins[MI_BIN_HUGE+1];     
  mi_stat_count_t   chunk_bins[MI_CBIN_COUNT];    
} mi_stats_t;