rust/mimalloc-pprof/src/sys.rs


/// Mirrors `MI_MEMORY_SNAPSHOT_VERSION` in `include/mimalloc/memory-events.h`.
pub const MI_MEMORY_SNAPSHOT_VERSION: c_int = 1;

/// Mirrors `mi_memory_change_kind_t`. Declared as a plain `c_int` rather than a Rust
/// `enum` on purpose: the value is produced by C, and materialising an out-of-range
/// discriminant into a `#[repr(i32)]` enum would be undefined behaviour.
#[allow(non_camel_case_types)]
pub type mi_memory_change_kind_t = c_int;

/// Mirrors `MI_MEMORY_ALLOCATE`.
pub const MI_MEMORY_ALLOCATE: mi_memory_change_kind_t = 0;
/// Mirrors `MI_MEMORY_FREE`.
pub const MI_MEMORY_FREE: mi_memory_change_kind_t = 1;
/// Mirrors `MI_MEMORY_RESIZE`.
pub const MI_MEMORY_RESIZE: mi_memory_change_kind_t = 2;
/// Mirrors `MI_MEMORY_CHANGE_COUNT`: the number of callback slots, not a kind.
pub const MI_MEMORY_CHANGE_COUNT: usize = 3;

/// Mirrors `mi_memory_change_t` (include/mimalloc/memory-events.h) field-for-field.
#[repr(C)]
#[derive(Clone, Copy, Debug, Default, PartialEq, Eq)]
#[allow(non_camel_case_types)]
pub struct mi_memory_change_t {
    /// One of [`MI_MEMORY_ALLOCATE`] / [`MI_MEMORY_FREE`] / [`MI_MEMORY_RESIZE`].
    pub kind: mi_memory_change_kind_t,
    /// Tracked global live usable bytes after this operation.
    pub total_bytes: u64,
    /// Signed change in tracked live usable bytes caused by this operation.
    pub delta_bytes: i64,
    /// Caller-requested size for allocation and resize; zero for free.
    pub request_size: u64,
}

/// Mirrors `mi_memory_change_fun` (include/mimalloc/memory-events.h).
#[allow(non_camel_case_types)]
pub type mi_memory_change_fun =
    unsafe extern "C" fn(change: *const mi_memory_change_t, arg: *mut c_void);

/// Mirrors `mi_memory_callbacks_t` (include/mimalloc/memory-events.h): one handler and
/// one caller-owned `arg` per [`mi_memory_change_kind_t`], indexed by the kind.
#[repr(C)]
#[derive(Clone, Copy)]
#[allow(non_camel_case_types)]
pub struct mi_memory_callbacks_t {
    /// Handler per change kind; `None` leaves that kind unobserved.
    pub handlers: [Option<mi_memory_change_fun>; MI_MEMORY_CHANGE_COUNT],
    /// Caller-owned context per change kind, passed back to the matching handler.
    pub args: [*mut c_void; MI_MEMORY_CHANGE_COUNT],
}

/// Mirrors `mi_memory_snapshot_t` (include/mimalloc/memory-events.h) field-for-field.
#[repr(C)]
#[derive(Clone, Copy, Debug, Default, PartialEq, Eq)]
#[allow(non_camel_case_types)]
pub struct mi_memory_snapshot_t {
    /// `sizeof(mi_memory_snapshot_t)`; fill in before calling `mi_memory_snapshot`.
    pub size: usize,
    /// [`MI_MEMORY_SNAPSHOT_VERSION`]; fill in before calling `mi_memory_snapshot`.
    pub version: c_int,
    /// Tracked live usable bytes right now.
    pub live_bytes: u64,
    /// Cumulative usable bytes ever allocated.
    pub accum_bytes: u64,
    /// Tracked live allocation count right now.
    pub live_count: u64,
    /// Cumulative count of successful allocate events.
    pub accum_count: u64,
}

/// Mirrors `mi_memory_allocation_visit_fun` (include/mimalloc/memory-events.h).
#[allow(non_camel_case_types)]
pub type mi_memory_allocation_visit_fun =
    unsafe extern "C" fn(allocation: *mut c_void, usable_size: usize, arg: *mut c_void) -> bool;

// ---------------------------------------------------------------------------------------
// include/mimalloc.h -- mi_option_t
// ---------------------------------------------------------------------------------------

/// Mirrors `mi_option_t` (include/mimalloc.h).
///
/// **Positional, and silently wrong if it drifts.** This fork inserts thirteen
/// enumerators (`mi_option_prof*`, `mi_option_memory_events`, `mi_option_purge_zeroes`,
/// `mi_option_scavenger`, `mi_option_purge_holes*`) at indices 47..=59, immediately
/// before `_mi_option_last` -- so a mirror copied from upstream mimalloc would set a
/// *different* option than the caller named, with no diagnostic. Every value below is
/// checked against the C enum at test time by `tests/t19_layout.rs`, and the ordering is
/// checked against `include/mimalloc.h` by `ci/check_rust_surface.py`.
#[allow(non_camel_case_types)]
pub type mi_option_t = c_int;

macro_rules! mi_options {
    ($($(#[$attr:meta])* $name:ident = $value:expr;)*) => {
        $(
            $(#[$attr])*
            #[allow(non_upper_case_globals)]
            pub const $name: mi_option_t = $value;
        )*
        /// Every enumerator of `mi_option_t` up to and including `_mi_option_last`, in C
        /// declaration order, as `(name, value)` pairs. Used by `tests/t19_layout.rs` to
        /// check this mirror against the C enum, and by `ci/check_rust_surface.py` to
        /// check it against `include/mimalloc.h`.
        pub const MI_OPTIONS_IN_ORDER: &[(&str, mi_option_t)] = &[$((stringify!($name), $name)),*];
    };
}

mi_options! {
    /// Print error messages.
    mi_option_show_errors = 0;
    /// Print statistics on termination.
    mi_option_show_stats = 1;
    /// Print verbose messages.
    mi_option_verbose = 2;
    /// Deprecated; kept for numbering.
    mi_option_deprecated_eager_commit = 3;
    /// Eagerly commit arena memory.
    mi_option_arena_eager_commit = 4;
    /// Purge decommits rather than resets.
    mi_option_purge_decommits = 5;
    /// Allow large (2 MiB) OS pages.
    mi_option_allow_large_os_pages = 6;
    /// Reserve N huge OS pages at startup.
    mi_option_reserve_huge_os_pages = 7;
    /// Reserve huge OS pages at a specific NUMA node.
    mi_option_reserve_huge_os_pages_at = 8;
    /// Reserve N KiB of OS memory at startup.
    mi_option_reserve_os_memory = 9;
    /// Deprecated; kept for numbering.
    mi_option_deprecated_segment_cache = 10;
    /// Deprecated; kept for numbering.
    mi_option_deprecated_page_reset = 11;
    /// Deprecated; kept for numbering.
    mi_option_deprecated_abandoned_page_purge = 12;
    /// Deprecated; kept for numbering.
    mi_option_deprecated_segment_reset = 13;
    /// Deprecated; kept for numbering.
    mi_option_deprecated_eager_commit_delay = 14;
    /// Milliseconds to delay purging.
    mi_option_purge_delay = 15;
    /// Number of NUMA nodes to use.
    mi_option_use_numa_nodes = 16;
    /// Refuse to allocate from the OS.
    mi_option_disallow_os_alloc = 17;
    /// Tag passed to the OS allocator.
    mi_option_os_tag = 18;
    /// Maximum error messages printed.
    mi_option_max_errors = 19;
    /// Maximum warning messages printed.
    mi_option_max_warnings = 20;
    /// Deprecated; kept for numbering.
    mi_option_deprecated_max_segment_reclaim = 21;
    /// Release all memory on process exit.
    mi_option_destroy_on_exit = 22;
    /// Bytes to reserve per new arena.
    mi_option_arena_reserve = 23;
    /// Multiplier on the arena purge delay.
    mi_option_arena_purge_mult = 24;
    /// Deprecated; kept for numbering.
    mi_option_deprecated_purge_extend_delay = 25;
    /// Refuse to allocate from arenas.
    mi_option_disallow_arena_alloc = 26;
    /// Retry count on OS out-of-memory.
    mi_option_retry_on_oom = 27;
    /// Deprecated; kept for numbering.
    mi_option_deprecated_visit_abandoned = 28;
    /// Minimum size for guard-page allocation.
    mi_option_guarded_min = 29;
    /// Maximum size for guard-page allocation.
    mi_option_guarded_max = 30;
    /// Place guard pages precisely after the block.
    mi_option_guarded_precise = 31;
    /// Sample every N-th allocation for guard pages.
    mi_option_guarded_sample_rate = 32;
    /// Seed for guard-page sampling.
    mi_option_guarded_sample_seed = 33;
    /// Collect generically every N-th generic allocation.
    mi_option_generic_collect = 34;
    /// Reclaim abandoned pages on free.
    mi_option_page_reclaim_on_free = 35;
    /// Number of full pages to retain per bin.
    mi_option_page_full_retain = 36;
    /// Candidate pages searched per allocation.
    mi_option_page_max_candidates = 37;
    /// Maximum virtual address bits to assume.
    mi_option_max_vabits = 38;
    /// Commit the page map eagerly.
    mi_option_pagemap_commit = 39;
    /// Commit page memory on demand.
    mi_option_page_commit_on_demand = 40;
    /// Maximum pages reclaimed at once.
    mi_option_page_max_reclaim = 41;
    /// Maximum cross-thread pages reclaimed at once.
    mi_option_page_cross_thread_max_reclaim = 42;
    /// Allow transparent huge pages.
    mi_option_allow_thp = 43;
    /// Smallest range worth purging.
    mi_option_minimal_purge_size = 44;
    /// Largest object served from an arena.
    mi_option_arena_max_object_size = 45;
    /// Treat arenas as NUMA local.
    mi_option_arena_is_numa_local = 46;
    /// **Fork addition.** Enable the allocation sampling profiler at process start
    /// (`MIMALLOC_PROF`).
    mi_option_prof = 47;
    /// **Fork addition.** Average byte interval between profiler samples.
    mi_option_prof_sample_rate = 48;
    /// **Fork addition.** Maximum captured stack depth for the profiler.
    mi_option_prof_bt_max = 49;
    /// **Fork addition.** Keep cumulative profiler counters until `mi_prof_reset`.
    mi_option_prof_accum = 50;
    /// **Fork addition.** Profiler sampling PRNG seed; 0 = nondeterministic.
    mi_option_prof_seed = 51;
    /// **Fork addition.** Budget in bytes for profiler-internal arena memory.
    mi_option_prof_max_bytes = 52;
    /// **Fork addition.** Enable allocation-change accounting/callbacks
    /// (`MIMALLOC_MEMORY_EVENTS`).
    mi_option_memory_events = 53;
    /// **Fork addition, dead since #80.** The slot is kept so nothing renumbers; setting
    /// it parses but has no effect. Unrelated to `mi_option_purge_holes_eager_zero`.
    mi_option_purge_zeroes = 54;
    /// **Fork addition (Bun).** Run a background thread that purges scheduled arena memory.
    mi_option_scavenger = 55;
    /// **Fork addition (Bun).** Discard the memory of free blocks inside still-used pages
    /// on `mi_on_thread_idle`.
    mi_option_purge_holes = 56;
    /// **Fork addition (Bun).** Zero a range before discarding it, so a mis-scoped discard
    /// corrupts visibly.
    mi_option_purge_holes_eager_zero = 57;
    /// **Fork addition (Bun).** Minimum milliseconds between sweeps of one thread's heaps.
    mi_option_purge_holes_min_interval = 58;
    /// **Fork addition (Bun).** Every N-th sweep walks every page, ignoring the per-page
    /// skip check; 0 disables.
    mi_option_purge_holes_full_every = 59;
    /// Sentinel: one past the last real option.
    _mi_option_last = 60;
}

/// Deprecated upstream alias for [`mi_option_allow_large_os_pages`].
#[allow(non_upper_case_globals)]
pub const mi_option_large_os_pages: mi_option_t = mi_option_allow_large_os_pages;
/// Deprecated upstream alias for [`mi_option_arena_eager_commit`].
#[allow(non_upper_case_globals)]
pub const mi_option_eager_region_commit: mi_option_t = mi_option_arena_eager_commit;
/// Deprecated upstream alias for [`mi_option_purge_decommits`].
#[allow(non_upper_case_globals)]
pub const mi_option_reset_decommits: mi_option_t = mi_option_purge_decommits;
/// Deprecated upstream alias for [`mi_option_purge_delay`].
#[allow(non_upper_case_globals)]
pub const mi_option_reset_delay: mi_option_t = mi_option_purge_delay;
/// Deprecated upstream alias for [`mi_option_disallow_os_alloc`].
#[allow(non_upper_case_globals)]
pub const mi_option_limit_os_alloc: mi_option_t = mi_option_disallow_os_alloc;

/// One entry of the ABI layout table published by [`mi_rs_layout_table`].
#[repr(C)]
#[derive(Clone, Copy)]
pub struct MiRsLayoutEntry {
    /// NUL-terminated static key, e.g. `sizeof:mi_stats_t` or `option:mi_option_prof`.
    pub name: *const c_char,
    /// The value the C compiler computed for that key.
    pub value: usize,
}
